# gc-adapter

./: Cargo.toml  README.md
src/: axis.rs  lib.rs  main.rs  parsing.rs
src/usb/: libusb.rs  mod.rs
