[package]
name = "gc-adapter"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
binread = "1.4.1"
modular-bitfield = "0.11.2"

rusb = { version = "0.6", optional = true }

[features]
libusb = ["rusb"]
